all latex reports create latex file with tables as final report #8

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 /_output/*
 
 # Exclude PDFs generated from source LaTeX files, which are kept in the reports directory
-/reports/*.pdf
+# /reports/*.pdf
 
 # Secrets saved in environment files
 .env*
