clean up dodo.py and unnecessary example files #7 and #12

--- a/chartbook.toml
+++ b/chartbook.toml
@@ -4,5 +4,5 @@ favicon_path = ""
 
 [site]
 title = "Blank Project Template"
-author = "Jeremy Bejarano"
+author = "Jesse Yan and Gabriel Ran"
 copyright = "2025"
